[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Editor/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Editor/UpLeftMenu.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Editor/ButtomMenu.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UI/labelTimer.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.827451, 0.929412, 0.203922 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0588235, 0.827451, 0.929412, 0.203922 )

[node name="LevelEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="." groups=[
"level",
]]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ButtomMenu" type="Panel" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -109.0
margin_bottom = -1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ButtomMenu"]
margin_top = -24.0
margin_right = 170.0
margin_bottom = 1.90735e-06
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="Button" parent="UI/ButtomMenu/HBoxContainer"]
modulate = Color( 0, 0.733333, 0.733333, 0.670588 )
margin_right = 55.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.145098, 0.145098, 0.145098, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Tiles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Misc" type="Button" parent="UI/ButtomMenu/HBoxContainer"]
modulate = Color( 0, 0.733333, 0.733333, 0.670588 )
show_behind_parent = true
light_mask = -2147483647
margin_left = 57.0
margin_right = 112.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Misc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mobs" type="Button" parent="UI/ButtomMenu/HBoxContainer"]
modulate = Color( 0, 0.733333, 0.733333, 0.670588 )
show_behind_parent = true
light_mask = -2147483647
margin_left = 114.0
margin_right = 170.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Mobs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="UI/ButtomMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.0
margin_top = -47.5
margin_right = 454.0
margin_bottom = 47.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ButtomMenu/ScrollContainer"]

[node name="UpLeftMenu" type="Panel" parent="UI"]
margin_right = 192.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/UpLeftMenu"]
margin_right = 192.0
margin_bottom = 64.0
text = "Thanks for your contribution!
00:00:00"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="UI/UpLeftMenu"]
margin_top = 72.0
margin_right = 41.0
margin_bottom = 92.0
focus_mode = 1
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="UI/UpLeftMenu"]
margin_left = 48.0
margin_top = 72.0
margin_right = 90.0
margin_bottom = 92.0
focus_mode = 1
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.112
margin_top = -120.755
margin_right = 162.888
margin_bottom = 89.245
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 769.0
margin_top = 1.0
margin_right = 959.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Button" parent="UI/VBoxContainer"]
margin_right = 190.0
margin_bottom = 20.0
text = "Select"

[node name="Delete" type="Button" parent="UI/VBoxContainer"]
margin_top = 24.0
margin_right = 190.0
margin_bottom = 44.0
text = "Delete"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
[connection signal="pressed" from="UI/ButtomMenu/HBoxContainer/Tiles" to="UI/ButtomMenu" method="_on_Tiles_pressed"]
[connection signal="pressed" from="UI/ButtomMenu/HBoxContainer/Misc" to="UI/ButtomMenu" method="_on_Misc_pressed"]
[connection signal="pressed" from="UI/ButtomMenu/HBoxContainer/Mobs" to="UI/ButtomMenu" method="_on_Mobs_pressed"]
[connection signal="pressed" from="UI/UpLeftMenu/Save" to="UI/UpLeftMenu" method="_on_Save_pressed"]
[connection signal="pressed" from="UI/UpLeftMenu/Load" to="UI/UpLeftMenu" method="_on_Load_pressed"]
[connection signal="confirmed" from="UI/FileDialog" to="UI/UpLeftMenu" method="_on_FileDialog_confirmed"]
[connection signal="pressed" from="UI/VBoxContainer/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Delete" to="." method="_on_Delete_pressed"]
